plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
    id 'org.jetbrains.kotlin.jvm'
	id 'org.sonarqube' version '3.5.0.2730'
}

group = 'br.com.blitech'
version = '1.0.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation("org.springframework.boot:spring-boot-starter-web")
	implementation("org.springframework.boot:spring-boot-starter-actuator")
	implementation("org.springframework.boot:spring-boot-starter-validation")
	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
	implementation("org.springframework.boot:spring-boot-starter-data-ldap")
	implementation("org.springframework.boot:spring-boot-starter-security")
	implementation("org.springframework.boot:spring-boot-starter-data-redis")

	implementation("org.postgresql:postgresql:42.7.2")
	implementation("org.flywaydb:flyway-core:9.0.0")

	implementation("io.jsonwebtoken:jjwt-api:0.11.2")
	implementation("io.jsonwebtoken:jjwt-impl:0.11.2")
	implementation("io.jsonwebtoken:jjwt-jackson:0.11.2")

	implementation("software.amazon.awssdk:secretsmanager:2.21.29")

	implementation("io.micrometer:micrometer-tracing-bridge-brave:1.2.3")
	implementation("io.micrometer:micrometer-registry-otlp:1.13.4")

	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0")

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'
}

tasks.test {
	finalizedBy jacocoTestReport
	useJUnitPlatform()
	environment("AUTHORIZATION_SECRETS_MANAGER_IMPL", "localstack")
	environment("SPRING_PROFILES_ACTIVE", "test")
}


tasks.jacocoTestReport {
	reports {
		xml.required = true
		csv.required = false
		xml.outputLocation = file("$buildDir/reports/jacoco/jacocoTestReport.xml")
	}
	dependsOn test
}
